--- a/oz.spec.in
+++ b/oz.spec.in
@@ -25,10 +25,10 @@ Requires: libvirt >= 0.9.7
 Requires: python3-requests
 Requires: genisoimage
 Requires: mtools
-#%if 0%{?fedora} < 26 or 0%{?rhel} < 8
-%if (0%{?fedora} < 26) || (0%{?rhel} < 8)
-Requires: python-uuid
-%endif
+##%if 0%{?fedora} < 26 or 0%{?rhel} < 8
+#%if (0%{?fedora} < 26) || (0%{?rhel} < 8)
+#Requires: python-uuid
+#%endif
 Requires: openssh-clients
 Requires: python3-m2crypto
 Requires: python3-monotonic
